Fix HTML formatting and update CSS link

--- a/career.html
+++ b/career.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#2c3e50">
     <title>Career - Tristan Wiehoff</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <nav class="navbar">
@@ -61,4 +61,5 @@
         <p><a href="https://www.umdmis.com" target="_blank" class="footer-link">UMD MIS Website</a></p>
     </footer>
 </body>
+
 </html>
